fix searchbar css to be visible in darkmode

--- a/frontend/src/app/landing-page/landing-page.component.css
+++ b/frontend/src/app/landing-page/landing-page.component.css
@@ -86,6 +86,7 @@ a {
   max-width: 500px;
   width: 100%;
   background-color: azure;
+  color: black;
   padding: 0px 5px;
   border-radius: 5px;
   margin: 10px 0px;
